<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>flexbe_utility_states</name>
  <version>2.0.0</version>
  <description>
     Provides a collection of generic states mainly for development and debugging purposes.
  </description>
  <author email="sm2296@cornell.edu">Spyros Maniatopoulos</author>
  <maintainer email="philsplus@gmail.com">Philipp Schillinger</maintainer>
  <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/FlexBE/generic_flexbe_states</url>
  <url type="bugtracker">https://github.com/FlexBE/generic_flexbe_states/issues</url>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>flexbe_core</exec_depend>
  <exec_depend>flexbe_testing</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <flexbe_states />
  </export>

</package>
